grammar.js
    source_file: $ => repeat($.ModuleDefinition),

    // TODO: This should prevent terminal hyphens. Apply it to other identifiers.
    // All-caps identifiers: object class names, WITH SYNTAX words, and type or
    // module names that happen to be all-caps.
    yellcased_identifier: $ => /[A-Z][A-Z0-9]*(-[A-Z0-9]+)*/,

    // Mixed-case identifiers (at least one lowercase letter). Used as `word` so
    // Tail is not split into T + ail during keyword extraction. Each hyphen must
    // be followed by an alphanumeric, which rules out both a trailing hyphen and
    // `--`, so INTEGER--comment is not one token. The segment before the first
    // lowercase letter is restricted to uppercase and digits; that is what keeps
    // this disjoint from yellcased_identifier.
    uppercased_identifier: $ => /[A-Z](-?[A-Z0-9])*-?[a-z](-?[A-Za-z0-9])*/,

    // Type and module names may be all-caps or mixed-case; object class names
    // may only be all-caps (yellcased_identifier).
    _upper_name: $ => choice($.yellcased_identifier, $.uppercased_identifier),
    lowercased_identifier: $ => /[a-z][a-zA-Z0-9]*(-[a-zA-Z0-9]+)*/,

    identifier: $ => $.lowercased_identifier,
    // identifier: $ => alias($.lowercased_identifier, $.identifier),
    // identifier: $ => /[a-z][a-zA-Z0-9]*(-[a-zA-Z0-9]+)*/,

    modulereference: $ => alias($._upper_name, $.modulereference),
    valuereference: $ => alias($.lowercased_identifier, $.valuereference),

    number: $ => choice(
      '0',
      /[1-9][0-9]*/,
    ),
    
    objectsetreference: $ => $._upper_name,
    
    cstring: $ => /"([^"]|"")*"/,
    
    line_comment: $ => token(seq(
      '--',
      /([^-\n]|-[^-\n])*/,
      optional('-'),
      optional('--'),
    )),

    // XMLNullValue is `empty` in X.680/X.693. Tree-sitter has no empty tokens,
    // so null (and other empty XML values) are represented by omitting XMLValue
    // between the tags rather than a sentinel / joke terminal.
