test/corpus/lexical.txt
================================================================================
Line comment ends at the next double hyphen
================================================================================

Mod DEFINITIONS ::= BEGIN
A ::= SEQUENCE { x INTEGER-- c -- }
END

--------------------------------------------------------------------------------

(source_file
  (ModuleDefinition
    (ModuleIdentifier
      (modulereference))
    (DEFINITIONS)
    (BEGIN)
    (ModuleBody
      (AssignmentList
        (Assignment
          (TypeAssignment
            (Type
              (BuiltinType
                (SequenceType
                  (SEQUENCE)
                  (ComponentTypeLists
                    (RootComponentTypeList
                      (ComponentTypeList
                        (ComponentType
                          (NamedType
                            (identifier
                              (lowercased_identifier))
                            (Type
                              (BuiltinType
                                (IntegerType
                                  (INTEGER)))))))))
                  (line_comment))))))))
    (END)))

================================================================================
Line comment may end with a single hyphen
================================================================================

Mod DEFINITIONS ::= BEGIN
-- Refer to the in-
-- ServiceError definition.
A ::= INTEGER
END

--------------------------------------------------------------------------------

(source_file
  (ModuleDefinition
    (ModuleIdentifier
      (modulereference))
    (DEFINITIONS)
    (BEGIN)
    (line_comment)
    (line_comment)
    (ModuleBody
      (AssignmentList
        (Assignment
          (TypeAssignment
            (Type
              (BuiltinType
                (IntegerType
                  (INTEGER))))))))
    (END)))

================================================================================
Cstring with doubled quotes
================================================================================

Mod DEFINITIONS ::= BEGIN
c2 PrintableString ::= "hello""world"
END

--------------------------------------------------------------------------------

(source_file
  (ModuleDefinition
    (ModuleIdentifier
      (modulereference))
    (DEFINITIONS)
    (BEGIN)
    (ModuleBody
      (AssignmentList
        (Assignment
          (ValueAssignment
            (Type
              (BuiltinType
                (CharacterStringType
                  (RestrictedCharacterStringType
                    (PrintableString)))))
            (Value
              (BuiltinValue
                (CharacterStringValue
                  (RestrictedCharacterStringValue
                    (cstring)))))))))
    (END)))
