test/corpus/object-class.txt
================================================================================
Object class without WITH SYNTAX
================================================================================

Mod DEFINITIONS ::= BEGIN
CLASSY-BOI ::= CLASS { &id OBJECT IDENTIFIER }
Typeyboi ::= CLASSY-BOI.&id
END

--------------------------------------------------------------------------------

(source_file
  (ModuleDefinition
    (ModuleIdentifier
      (modulereference))
    (DEFINITIONS)
    (BEGIN)
    (ModuleBody
      (AssignmentList
        (Assignment
          (ObjectClassAssignment
            (ObjectClass
              (ObjectClassDefn
                (CLASS)
                (FieldSpec
                  (FixedTypeValueFieldSpec
                    (Type
                      (BuiltinType
                        (ObjectIdentifierType
                          (OBJECT)
                          (IDENTIFIER))))))))))
        (Assignment
          (TypeAssignment
            (Type
              (BuiltinType
                (ObjectClassFieldType
                  (DefinedObjectClass)
                  (FieldName))))))))
    (END)))

================================================================================
WITH SYNTAX field references
================================================================================

Mod DEFINITIONS ::= BEGIN
ALGORITHM-ID ::= CLASS {
    &id OBJECT IDENTIFIER UNIQUE,
    &Type OPTIONAL
}
WITH SYNTAX {
    OID &id
    [PARMS &Type]
}
END

--------------------------------------------------------------------------------

(source_file
  (ModuleDefinition
    (ModuleIdentifier
      (modulereference))
    (DEFINITIONS)
    (BEGIN)
    (ModuleBody
      (AssignmentList
        (Assignment
          (ObjectClassAssignment
            (ObjectClass
              (ObjectClassDefn
                (CLASS)
                (FieldSpec
                  (FixedTypeValueFieldSpec
                    (Type
                      (BuiltinType
                        (ObjectIdentifierType
                          (OBJECT)
                          (IDENTIFIER))))
                    (UNIQUE)))
                (FieldSpec
                  (TypeFieldSpec
                    (TypeOptionalitySpec
                      (OPTIONAL))))
                (WithSyntaxSpec
                  (WITH)
                  (SYNTAX)
                  (SyntaxList
                    (TokenOrGroupSpec
                      (RequiredToken
                        (Literal)))
                    (TokenOrGroupSpec
                      (RequiredToken))
                    (TokenOrGroupSpec
                      (OptionalGroup
                        (TokenOrGroupSpec
                          (RequiredToken
                            (Literal)))
                        (TokenOrGroupSpec
                          (RequiredToken))))))))))))
    (END)))

================================================================================
Object set assignment with useful object class
================================================================================

Mod DEFINITIONS ::= BEGIN
MySet TYPE-IDENTIFIER ::= { { &id { 1 2 3 }, &Type INTEGER } }
END

--------------------------------------------------------------------------------

(source_file
  (ModuleDefinition
    (ModuleIdentifier
      (modulereference))
    (DEFINITIONS)
    (BEGIN)
    (ModuleBody
      (AssignmentList
        (Assignment
          (ObjectSetAssignment
            (DefinedObjectClass
              (UsefulObjectClassReference
                (TYPE_IDENTIFIER)))
            (ObjectSet
              (ObjectSetSpec
                (RootElementSetSpec
                  (ElementSetSpec
                    (Unions
                      (Intersections
                        (IntersectionElements
                          (Elements
                            (ObjectSetElements
                              (Object
                                (ObjectDefn
                                  (DefaultSyntax
                                    (FieldSetting
                                      (Setting
                                        (Value
                                          (BuiltinValue
                                            (RelativeOIDValue
                                              (RelativeOIDComponentsList
                                                (RelativeOIDComponents
                                                  (NumberForm
                                                    (number)))
                                                (RelativeOIDComponents
                                                  (NumberForm
                                                    (number)))
                                                (RelativeOIDComponents
                                                  (NumberForm
                                                    (number)))))))))
                                    (FieldSetting
                                      (Setting
                                        (Type
                                          (BuiltinType
                                            (IntegerType
                                              (INTEGER))))))))))))))))))))))
    (END)))
